datasets/parsing_optimization/version1/shinhan_discount_plan+.md
| 고객센터 | 1544-7000 |
| --- | --- |
| 카드신청 | 1661-8599 |
| 오토다이렉트 센터 | 1688-7474 |
 | 단기/장기 카드대출 | 1544-0303 |
| --- | --- |
| MF대출서비스 | 1661-2032 |
| 할부금융 고객센터 | 1544-7100 |
 ※ 연체이자율은"회원별, 이용상품별 약정금리+최대 연 3%, 법정 최고금리(연 20%) 이내"에서 적용됩니다.
단, 연체 발생 시점에 약정금리가 없는 경우 약정금리는 아래와 같이 적용함
- 일시불 거래 연체 시 : 거래 발생 시점의 최소기간(2개월) 유이자 할부 금리
-무이자 할부 거래 연체 시 : 거래 발생 시점의 동일한 할부 계약기간의 유이자 할부 금리
-그 외의 경우: 상법상 상사법정이율과 상호금융 가계자금대출금리* 중 높은 금리 적용
*한국은행에서 매월 발표하는 가장 최근의 비은행 금융기관 가중평균대출금리(신규대출 기준)
※ 상환능력에 비해 신용카드 사용액이 과도할 경우, 귀하의 개인신용평점이 하락할 수 있습니다.
※ 개인신용평점 하락시 금융거래와 관련된 불이익이 발생할 수 있습니다.
※ 일정기간 신용카드 이용대금을 연체할 경우, 결제일이 도래하지 않은 모든 신용카드 이용대금을 변제할
의무가 발생할 수 있습니다.
※ 여신금융협회 심의필 제2025-C1a-05552호(2025.04. DISCOUNT 계획한 모든 일상에 따라오는 할인 신한카드 PLAN+ PLAN+
COUNT ShinhanCard

신한카드 Discount Plan+ 카드 디자인 ![image](/image/placeholder)
DISCOUNT
P AN
PLAN+
DISCOUNT # 연회비 | 구분 | 구분 | 총 연회비 | 기본 연회비 | 서비스 연회비 |
| --- | --- | --- | --- | --- |
| 국내전용 | Local | 5만원 | 7천원 | 4만3천원 |
| 해외겸용 | Mastercard Platinum | 5만원 | 7천원 | 4만3천원 |
 - ※ 연회비는 기본연회비와 서비스연회비를 합산해 카드별로 청구됩니다.
- ※ 가족카드 연회비는 없습니다.
- (단, 가족카드 단독으로 발급받을 경우 연회비가 부과됩니다.)
- ※ 후불교통 기능이 있는 카드로만 신청 가능합니다.
- ※ 해외겸용(Mastercard)은 컨택리스 결제를 지원합니다.
- ※ 신한카드 Discount Plan+로 국제브랜드사(Mastercard)의 플래티늄 서비스를
- 이용할 수 있습니다.
- 브랜드사 서비스 안내장, 신한카드 홈페이지(www.shinhancard.com) 및
- 국제브랜드사 홈페이지(www.mastercard.co.kr)에서 서비스 세부 내용 및
- 유의사항을 확인해주세요.
 # 한눈에 보기 Time Plan 서비스 - · DAY 10% 할인 : 카페 / 음식점
- · NIGHT 10% 할인 : 편의점 / 배달앱
 # Daily Plan 서비스 - · 쇼핑 10% 할인 : 마트 / 온라인쇼핑 / 아울렛 / 잡화
- * 이동 5% 할인 : 주유 / 카쉐어링 / 주차 / 택시
- · 생활 5% 할인 : 해외 / 병원·약국 / 미용실 / 온라인서점
 # Plan Day 서비스 * 매월 1 일 Time Plan, Daily Plan 서비스 2배 할인(서비스당 1회) # Monthly Plan 서비스 - · 정기결제 최대 20% 할인
- - 공과금 10% / 디지털구독·멤버십 20% / 피트니스 5%
- * 영화 예매 5천원 할인
- · Monthly 리워드 최대 5천원 캐시백
 # Annual Plan 서비스 - * 장보기 3만원 캐시백 (연 1회)
- · 스피드메이트 정비 할인
- · 테마파크 할인
 # [서비스별 월 통합 혜택 한도] | 전월 이용금액 (일시불+할부) | 전월 이용금액 (일시불+할부) | 40만원 이상 80만원 미만 | 80만원 이상 120만원 미만 | 120만원 이상 180만원 미만 | 180만원 이상 |
| --- | --- | --- | --- | --- | --- |
| Time Plan | Time Plan | 5천원 | 1만원 | 1 만5천원 | 2만원 |
| Daily Plan | Daily Plan | 1만 5천원 | 2만 5천원 | 3만5천원 | 5만원 |
| Monthly Plan | 정기결제 | 5천원 | 1만원 | 1만5천원 | 2만원 |
| Monthly Plan | 영화예매 | 5천원 | 5천원 | 5천원 | 5천원 |
| Monthly Plan | Monthly 리워드 | - | - | 3천원 (150만원 이상 시) | 5천원 |
| 월 최대 혜택 한도 | 월 최대 혜택 한도 | 3만원 | 5만원 | 7만3천원 * | 10만원 |
 * 전월 이용금액 120만원 이상 150만원 미만일 경우 최대 7만원,
150만원 이상 180만원 미만일 경우 최대 7만3천원 혜택 한도가 제공됩니다.

# 신한카드 Discount Plan+ 서비스 # Time Plan 서비스 - · DAY 10% 결제일 할인 : 카페 / 음식점
- · NIGHT 10% 결제일 할인 : 편의점 / 배달앱
 | 시간 | 영역 | 대상 가맹점 |
| --- | --- | --- |
| DAY (07~15시) | 카페 | 스타벅스, 투썸플레이스, 폴바셋, 커피빈, 메가커피, 이디야 |
| DAY (07~15시) | 음식점 | 한식, 일식, 양식, 중식, 일반대중음식, 패스트푸드, 뷔페 업종 |
| NIGHT (18~22시) | 편의점 | CU, GS25, 세븐일레븐, 이마트24 |
| NIGHT (18~22시) | 배달앱 | 배달의민족, 요기요, 쿠팡이츠, 땡겨요 |
 - ※ 각 영역(카페/음식점/편의점/배달앱) 별로 일 1회 할인됩니다.
- ※ 할인받기 전 이용금액 기준 1회 1만원까지 할인됩니다.
 - ※ DAY(카페/음식점) 할인은 승인시간 기준으로
- 07시 00분부터 15시 00분까지 적용되며, NIGHT(편의점/배달앱) 할인은
- 승인시간 기준으로 18시 00분부터 22시 00분까지 적용됩니다.
- ※ 카페, 음식점, 편의점 영역은 오프라인 매장 이용 시에만 할인됩니다. 단, 백화점,
- 할인점, 면세점, 공항, 기차역 등 입점된 임대 매장 이용 시에는 할인되지 않습니다.
- ※ 카페 영역은 스타벅스 사이렌오더 등 스마트 오더 이용 시에도 할인됩니다.
- ※ 배달앱 영역은 공식 배달앱에서 '앱 내 카드결제' 시 할인되며,
- '현장결제'(물품 수령 시 결제)는 할인되지 않습니다.
- ※ 배달앱으로 카페/음식점/편의점 주문 시에는 카페/음식점/편의점 할인이
- 적용되지 않습니다.
- ※ 카페 영역의 대상 가맹점이 음식점 업종에 해당할 경우 카페 할인이 적용되며,
- 음식점 할인은 적용되지 않습니다.
 [월 통합 혜택 한도 | Time Plan 서비스] | 구분 | 40만원 이상 80만원 미만 | 80만원 이상 120만원 미만 | 120만원 이상 180만원 미만 | 180만원 이상 |
| --- | --- | --- | --- | --- |
| Time Plan | 5천원 | 1만원 | 1만5천원 | 2만원 |
 ※ Time Plan 서비스 제외 대상을 포함한 유의사항 및 전월 이용금액 관련
상세 기준은 '신한카드 Discount Plan+ 서비스 유의사항' 페이지를 확인해
주시기 바랍니다. Daily Plan 서비스 # · 쇼핑 10% 결제일 할인 # - 마트 / 온라인쇼핑 / 아울렛 / 잡화 | 영역 | 대상 가맹점 |
| --- | --- |
| 마트 | 이마트, 트레이더스 홀세일 클럽, 롯데마트 |
| 온라인쇼핑 | 네이버플러스 스토어, 쿠팡, SSG.COM, 무신사, 29CM |
| 아울렛 | 신세계사이먼 프리미엄아울렛, 현대 프리미엄 아울렛, 롯데 프리미엄 아울렛 |
| 잡화 | 올리브영, 다이소 |
 - ※ 각 영역(마트/온라인쇼핑/아울렛/잡화) 별로 일 1회, 월 5회까지 할인됩니다.
- ※ 할인받기 전 이용금액 기준 1회 5만원까지 할인됩니다.
- ※ 마트, 아울렛 영역 및 다이소는 오프라인 매장 이용 시에만 할인됩니다.
- ※ 마트 영역은 대상 가맹점 외 창고형 할인매장, 기업형 슈퍼마켓(이마트
- 에브리데이, 롯데슈퍼 등) 이용 시에는 할인되지 않습니다.
- ※ 마트, 아울렛 영역은 주차비, 문화센터 및 마트/아울렛 내 입점된 임대 매장
- 이용 시에는 할인되지 않습니다.
- ※ 온라인쇼핑 영역은 쿠팡 와우 멤버십, 네이버플러스 멤버십 요금 등 멤버십
- 및 구독형 서비스, 쿠팡이츠 이용 시에는 할인되지 않습니다.
- ※ 온라인쇼핑 영역은 대상 가맹점의 공식 홈페이지 또는 모바일앱 이용 시에만
- 할인되며, 상품 선택 시 연결된 다른 사이트 및 앱에서 결제한 경우 할인되지
- 않습니다.
- ※ 온라인쇼핑 영역은 항공권, 티켓 구매와 같이 서비스 대상 가맹점이 아닌
- 별도 가맹점으로 결제되는 경우 할인되지 않습니다.
- ※ 올리브영은 오프라인 매장 및 공식 홈페이지/모바일앱 이용 시 할인됩니다.

신한카드 Discount Plan+ 서비스 # Daily Plan 서비스 # · 이동 5% 결제일 할인 # - 주유 / 카쉐어링 / 주차 / 택시 | 영역 | 대상 가맹점 |
| --- | --- |
| 주유 | SK에너지, GS칼텍스, HD현대오일뱅크, S-OIL |
| 카쉐어링 | 쏘카 |
| 주차 | 주차장 업종, 카카오T 주차 |
| 택시 | 택시 업종, 카카오T 택시 |
 ※ 각 영역(주유/카쉐어링/주차/택시) 별로 일 1회, 월 5회까지 할인됩니다. - ※ 할인받기 전 이용금액 기준 1회 5만원까지 할인됩니다.
- ※ 주유 영역은 휘발유, 경유, 등유만 할인되며 LPG 이용금액은 할인되지 않습니다.
- ※ 카카오T 주차, 카카오T 택시는 공식 앱에 등록된 신한카드 Discount Plan+로
- 결제 시 할인됩니다.
- ※ 주차장 내 키오스크 등을 통한 현장 결제 시 주차장 업종이 아닌 PG업종 등으로
- 결제되는 경우 할인되지 않습니다.
 # Daily Plan 서비스 # · 생활 5% 결제일 할인 # - 해외 / 병원·약국 / 미용실 / 온라인서점 | 영역 | 대상 가맹점 |
| --- | --- |
| 해외 | 해외 일시불 |
| 병원·약국 | 종합병원, 개인병원, 치과병원, 응급실운영병원, 약국 업종 |
| 미용실 | 이용, 미용 업종 |
| 온라인서점 | 교보문고, YES24 |
 - ※ 각 영역(해외/병원·약국/미용실/온라인서점) 별로 일 1회, 월 5회까지
- 할인됩니다.
- ※ 할인받기 전 이용금액 기준 1회 5만원까지 할인됩니다.
- ※ 해외 영역은 해외겸용(Mastercard) 카드 이용 시에만 할인되며,
- 최종 원화 청구금액을 기준으로 할인됩니다.
- ※ 해외 이용 시 별도의 수수료가 부과됩니다.
- 자세한 내용은 안내장 뒷면 해외이용 확인사항을 확인해주시기 바랍니다.
- ※ 해외 영역은 해외 일시불 거래 후 할부로 전환하는 경우에는 할인되지 않습니다.
- ※ 해외 영역은 해외 온라인 사이트에서 국내 가맹점(국내 전자 지급결제 대행사)으로
- 결제되는 경우에는 할인되지 않습니다.
- ※ 해외 영역은 해외 단기카드대출, 해외 현금인출, 해외 가상화폐 또는 해외 사행성
- 가맹점 이용 시에는 할인되지 않습니다.
- ※ 온라인서점 영역은 대상 가맹점의 공식 홈페이지 또는 모바일앱 이용 시에만
- 할인됩니다.
 # [월 통합 혜택 한도 | Daily Plan 서비스] | 구분 | 40만원 이상 80만원 미만 | 80만원 이상 120만원 미만 | 120만원 이상 180만원 미만 | 180만원 이상 |
| --- | --- | --- | --- | --- |
| Daily Plan | 1만5천원 | 2만5천원 | 3만5천원 | 5만원 |
 ※ Daily Plan 서비스 제외 대상을 포함한 유의사항 및 전월 이용금액 관련
상세 기준은 '신한카드 Discount Plan+ 서비스 유의사항' 페이지를 확인해
주시기 바랍니다.

# 신한카드 Discount Plan+ 서비스 # Plan Day 서비스 · 매월 1일 Time Plan, Daily Plan 서비스 2배 할인 - 매월 1 일 Time Plan 서비스, Daily Plan 서비스 첫 번째 할인 거래에
할인율 2배 적용(서비스당 1회) # [예시] 5월 1일 - ① 오전 10시 올리브영(잡화) 3만원 결제 → Plan Day 20% 할인
- ② 오후 1시 스타벅스(커피) 5천원 결제 → Plan Day 20% 할인
- ③ 오후 2시 S-OIL(주유) 5만원 결제 → Daily Plan 5% 할인
- ④ 오후 5시 다이소(잡화) 2만원 결제 → 할인 제외(일 1회 한도 초과)
 - ※ Time Plan 서비스, Daily Plan 서비스 각 1회(최대 2회) 적용되며,
- 각 서비스 대상 거래 중 승인 순서 기준으로 첫 번째 거래에 적용됩니다.
- ※ Daily Plan 서비스의 해외 영역에는 Plan Day 서비스가 적용되지 않습니다.
- ※ Plan Day 서비스는 승인 시간 기준으로 매월 1 일 23시 59분 59초까지
- 제공됩니다.
- ※ Plan Day 서비스는 Time Plan 서비스, Daily Plan 서비스의 월 통합 할인
- 한도 및 일/월 횟수 한도 내에서 제공됩니다.
 # Monthly Plan 서비스 # · 정기결제 최대 20% 결제일 할인 # / 공과금 10% / 디지털구독· 멤버십 20% / 피트니스 5% 할인 | 영역 | 할인율 | 대상 가맹점 |
| --- | --- | --- |
| 공과금 | 10% | 아파트관리비, 도시가스, 전기요금, 통신요금(SKT/KT/LGU+) |
| 디지털구독 | 20% | 넷플릭스, 유튜브 프리미엄, 티빙, 디즈니플러스, 밀리의서재 |
| 멤버십 | 20% | 네이버플러스 멤버십, 쿠팡 와우 멤버십 |
| 피트니스 | 5% | 스포츠센터/레포츠클럽, 테니스장, 수영장, 실내/외 골프장 업종 |
 - ※ 할인받기 전 이용금액 기준 공과금 1회 5만원, 디지털구독· 멤버십 1회 1만원,
- 피트니스 1회 10만원까지 할인됩니다.
- ※ 공과금 영역은 자동납부 시에만 할인됩니다.
- ※ 공과금 중 통신요금은 월 1회, 피트니스 영역은 일 1회 할인되며,
- 그 외 대상 가맹점 및 디지털구독, 멤버십 영역은 일/월 횟수 제한없이 할인됩니다.
- ※ 통신요금 자동납부가 2건 이상 등록되어 있는 경우 첫 번째 결제되는 자동납부
- 거래가 할인됩니다.
- ※ 통신요금은 순수 통신요금 자동납부 시에만 할인되며, 약정금액 대납,
- 지점을 통한 월납, 알뜰폰, 선불폰, 결합상품(TV, 인터넷, 유선전화 등)
- 이용 시에는 할인되지 않습니다.
- ※ 자동납부 거래가 주말/공휴일 등의 사유로 자동납부 청구월의 다음달 초
- 승인되는 경우, 청구월이 아닌 자동납부 거래 승인월 기준으로 할인됩니다.
- ※ 디지털구독, 멤버십 영역은 공식 홈페이지를 통한 정기결제(자동납부) 시에만
- 할인되며, 1회성 일반구매 결제, 구글 플레이/애플 앱스토어 등 앱마켓을 통한
- 인앱결제, 통신요금 포함 결제는 할인되지 않습니다.
- ※ 유튜브 프리미엄의 경우 PC 정기결제 이용금액만 할인됩니다.
- 모바일 이용금액은 인앱결제로 전환되어 할인되지 않습니다.

# 신한카드 Discount Plan+ 서비스 # Monthly Plan 서비스 # · 영화 예매 5천원 결제일 할인 - CGV, 롯데시네마 영화 예매 5천원 할인(월1 회) - ※ 할인 받기 전 이용금액 기준 1회 1만2천원 이상인 경우 할인됩니다.
- ※ CGV, 롯데시네마 공식 홈페이지/앱 및 오프라인 매장 이용 시에만 할인됩니다.
- ※ 영화 예매 시에만 할인되며 영화 예매권, 상품권, 매점, 통신사 홈페이지/앱을 통한
- 예매, 홈페이지/앱 내 식음료 및 기타 서비스 이용 시에는 할인되지 않습니다.
 · Monthly 리워드 최대 5천원 캐시백 - / 전월 150만원 이상 이용 시 3천원 캐시백
- - 전월 180만원 이상 이용 시 5천원 캐시백
 - ※ 신한카드 Discount Plan+ 카드의 전월(1 일~말일) 이용금액(일시불+할부)을
- 기준으로 다다음달 20일에 캐시백이 제공되며, 지급일이 주말 또는 공휴일인
- 경우 다음 영업일에 제공됩니다.
- [예시] 5월(1 일~말일) 총 200만원 이용 시, 7월 20일 5천원 캐시백 제공
- ※ 본인카드 회원에 한해 제공되며, 가족카드 이용금액은 본인카드 이용금액에
- 합산됩니다.
- ※ 전월 180만원 이상 이용 시 5천원 캐시백만 제공됩니다.
- (3천원 캐시백과 중복 제공되지 않습니다.)
 # [월 통합 혜택 한도 | Monthly Plan 서비스] | 구분 | 40만원 이상 80만원 미만 | 80만원 이상 120만원 미만 | 120만원 이상 180만원 미만 | 180만원 이상 |
| --- | --- | --- | --- | --- |
| 정기결제 | 5천원 | 1만원 | 1만5천원 | 2만원 |
| 영화예매 | 5천원 | 5천원 | 5천원 | 5천원 |
| Monthly 리워드 |  |  | 3천원 (150만원 이상 시) | 5천원 |
 ※ Monthly Plan 서비스 제외 대상을 포함한 유의사항 및 전월 이용금액 관련
상세 기준은 '신한카드 Discount Plan+ 서비스 유의사항' 페이지를 확인해
주시기 바랍니다. # Annual Plan 서비스 # · 장보기 3만원 캐시백 (연 1회) - 마트 3만원 이상 결제 시 3만원 캐시백 | 영역 | 대상 가맹점 |
| --- | --- |
| 마트 | 이마트, 트레이더스 홀세일 클럽, 롯데마트 |
 - ※ 연회비 청구 주기*를 기준으로 연 1회 제공되며,
- 주기 내 서비스 대상 거래가 없을 경우 다음 해로 이월되어 제공되지 않습니다.
- ※ 발급 초년도의 경우 연회비 납부 시 이용 실적에 관계없이 제공되며,
- 발급 2차년도부터는 연회비 납부 및 전년도(전 주기) 이용금액(일시불+할부)
- 1,000만원 이상 시 제공됩니다. 전년도 이용금액 제외 대상은 전월 이용금액
- 제외 대상과 동일합니다.
- ※ 서비스 대상 거래가 발생한 월의 다다음달 20일에 캐시백이 제공되며,
- 지급일이 주말 또는 공휴일인 경우 다음 영업일에 제공됩니다.
- ※ 본인카드 회원에 한해 제공되며, 전년도 이용금액 산정 시 가족카드 이용금액은
- 본인카드 이용금액에 합산됩니다.
- ※ 결제일 변경 시 연회비 청구 주기가 변경될 수 있습니다.
- ※ 연회비를 선납하여도 캐시백은 선 제공되지 않습니다.
- ※ 오프라인 매장 이용 시에만 캐시백 제공되며, 대상 가맹점 외
- 창고형 할인매장, 기업형 슈퍼마켓, 주차비, 문화센터, 마트 내 입점된 임대 매장
- 이용 시에는 캐시백 제공되지 않습니다.
- ※ Daily Plan 및 Plan Day 서비스의 마트 영역 할인과 서비스 중복 제공이
- 가능합니다.
- ※ 발급 초년도에 장보기 캐시백 제공 후 신한카드 Discount Plan+ 카드를
- 해지하는 경우, 캐시백 금액은 연회비 반환 금액에서 제외됩니다.
- ※ 캐시백 제공 시점 이전에 카드를 해지 또는 이용 정지하여 유효한 카드를
- 보유하지 않은 경우에는 캐시백이 제공되지 않습니다.
 # [참고] * 연회비 청구 주기 : 연회비 결제월의 1일부터 익년도 연회비 결제월의
전월 말일까지(단, 초년도 발급의 경우 발급일~익년도 연회비 결제월의
전월 말일까지) (예시) 연회비 결제일이 25년 4월 14일인 경우 연회비 청구 주기 - - 발급 1차년도 : 발급일 ~ 26.03.31
- - 발급 2차년도 : 26.04.01 ~ 27.03.31
 ※ Annual Plan - 장보기 캐시백 서비스 제외 대상을 포함한 유의사항 및
전년도 이용금액 관련 상세 기준은 '신한카드 Discount Plan+ 서비스
유의사항' 페이지를 확인해 주시기 바랍니다.

# 신한카드 Discount Plan+ 서비스 # Annual Plan 서비스 # · 스피드메이트 정비 현장 할인 | 영역 | 서비스 |
| --- | --- |
| 엔진오일 교환 | 국산차 엔진오일 교환 3만원 할인 수입차 엔진오일 교환 30% 할인 |
| 차량정비 | 국산차 에어컨필터 교환 1만원 할인 국산차 에어컨가스 완충 1만원 할인 국산차 부동액 교환 1만원 할인 |
 - ※ 전월(1 일~말일) 일시불·할부 이용금액 30만원 이상일 경우, 통합 월 1회,
- 연 3회 할인됩니다.
- ※ 스피드메이트 오프라인 매장에서 현장 할인으로 제공되며, 이용 전
- 스피드메이트 직원에게 카드를 제시하여 서비스 이용 가능 여부를 확인 후
- 이용하실 수 있습니다.
- ※ 스피드메이트에서 발행하는 쿠폰 등 기타 혜택 및 할인과 중복 적용되지
- 않습니다.
- ※ 엔진오일은 ZIC 계열, 캐스트롤, 쉘 품목에 한해 제공됩니다.
- ※ 에어컨필터/부동액은 SK기준품에 한해 제공됩니다.
- ※ 에어컨가스는 친환경냉매차량은 서비스 제외됩니다.
- ※ 1.3톤 초과차량은 서비스 제외됩니다.
- ※ 서비스 관련 상세 문의사항은 스피드메이트 고객센터(1 600-1600)로 문의해
- 주시기 바랍니다.
 # · 테마파크 할인 - - 에버랜드, 롯데월드 자유이용권 50% 할인
- - 캐리비안베이 입장권 30% 할인
 - ※ 전월(1 일~말일) 일시불 ·할부 이용금액 30만원 이상 시, 테마파크별 일 1회,
- 연 3회 할인됩니다.
- ※ 본인 자유이용권 및 입장권에 한하여 할인됩니다.
- ※ 본인/가족카드 복수 소지 시, 놀이공원 할인 서비스 제공 실적 및 횟수는
- 본인/가족카드 별도로 운영됩니다.
 # 신한카드 Discount Plan+ 유의사항 # [신한카드 Discount Plan+ 할인, 캐시백 서비스 적용 기준] - ※ 서비스 대상 가맹점이 온라인 가맹점일 경우 공식 홈페이지/앱에서
- 직접 결제하는 경우에만 서비스가 제공됩니다.
- ※ 키오스크, 간편결제(pay)로 결제 시 가맹점명이 해당 업체가 아닌 PG업체명,
- 간편결제명(네이버페이, 카카오페이 등)인 경우는 할인되지 않습니다.
- ※ 가맹점 업종은 신한카드 가맹점 업종 기준을 따릅니다.
- 신한카드 홈페이지 '가맹점 찾기' 메뉴에서 가맹점 업종 조회 가능합니다.
- ※ 할인 서비스가 적용된 거래가 해당월에 취소된 경우 할인 서비스 횟수 및 한도가
- 복원됩니다.
- ※ 할인 서비스는 서비스 영역별 이용하신 거래 순서대로 결제일 할인이 적용됩니다.
- 단, 해외 결제의 경우 신한카드에 접수되는 매입 순서대로 결제일 할인이
- 적용됩니다.
 # ※ 할인/캐시백 적용 제외 대상은 아래와 같습니다. - - 단기카드대출(현금서비스), 장기카드대출(카드론)
- - 연회비, 각종 수수료/이자(할부수수료, 연체이자 등)
- - 기프트카드/선불카드 구매 충전금액, 포인트 사용거래 중 포인트금액
- - 무이자할부(슬림할부 등 부분 무이자 포함) 이용거래
- - 상품권/선불전자지급수단 구매 충전금액
- - 포인트/캐시/사이버머니/예치금 등 전자지급(결제)수단 구매 충전금액
- - '신한카드 Discount Plan+'로 신한카드 할인서비스(이벤트 포함)를
- 적용받은 모든 거래(해당 거래금액 전체)
- - 거래 취소금액

신한카드 Discount Plan+ 유의사항 # [전월 이용금액 기준] ※ 전월 이용금액은 '신한카드 Discount Plan+'의 전월(1 일~말일) 거래 시점
이용금액(일시불+할부)을 기준으로 반영됩니다. - - 해외 이용금액은 매입일자를 기준으로 반영됩니다.
- - 교통카드 이용금액은 전전월 이용금액이 전월 이용금액에 반영됩니다.
- (단, 모바일 후불 교통카드 이용금액은 전월 이용금액이 반영됩니다.)
- - 테마파크 할인 서비스는 교통카드 이용금액이 전월 이용금액 기준으로
- 반영됩니다
 - ※ 본인카드와 가족카드의 전월 이용금액, 월별 할인 한도 및 이용 횟수는 통합 적용
- 됩니다. 단, Monthly 리워드 캐시백 서비스와 장보기 캐시백 서비스의 경우
- 전월/전년도 이용금액 산정 시 가족카드 이용금액이 본인카드 이용금액에
- 합산되며, 본인카드 회원에 한해 서비스가 제공됩니다. 테마파크 할인 서비스는
- 전월 이용금액 및 이용 횟수가 각 카드별로 적용됩니다.
- ※ 거래 후 취소금액은 국내 거래의 경우 최초 승인된 달의 이용금액에서,
- 해외 거래의 경우 취소 전표가 매입된 달의 이용금액에서 차감됩니다.
- [예시] 1월20일 국내 이용금액을 2월10일 취소하는 경우 1 월 이용금액에서 차감
- ※ '신한카드 Discount Plan+' 최초 신규 발급 회원*은 카드 사용 등록한 월의
- 다음달(등록월+1 개월)까지는 40만원 이상 80만원 미만 구간의 서비스가
- 적용됩니다. 단, 해당 기간에 80만원 이상 이용할 경우 그 구간에 맞는 서비스가
- 다음달에 적용됩니다. Monthly Plan 서비스의 영화 예매 할인, Annual Plan
- 서비스의 스피드 메이트 정비 할인, 테마파크 할인은 카드 사용 등록한 월의
- 다음달(등록월+1 개월)까지는 전월 이용금액에 관계없이 서비스가 제공됩니다.
 # * '신한카드 Discount Plan+' 유효기간 만기 또는 해지 후 재발급 시에는
최초 신규 발급 회원에서 제외됩니다. # ※ 전월(전년도) 이용금액 제외 대상은 아래와 같습니다. - - 단기카드대출(현금서비스), 장기카드대출(카드론)
- 、 연회비, 각종 수수료/이자(할부수수료, 연체이자 등)
- - 기프트카드/선불카드 구매 충전금액
- - 지방세, 국세, 지방세외수입, 환경개선부담금
- - 4대보험(국민연금, 고용보험, 건강보험, 산재보험)
- - 유치원/초중고 납입금(스쿨뱅킹), 대학(원)등록금
- - 아파트관리비, 도시가스, 전기요금, TV수신료, 수도요금
- - 상품권/선불전자지급수단 구매 충전금액
- - 포인트/캐시/사이버머니/예치금 등 전자지급(결제)수단 구매 · 충전금액
- - 거래 취소금액
- - 철도 업종 이용금액
 # 금융소비자 보호제도 안내 - ※ 금융소비자는 금융소비자보호법 제 19조 제 1 항에 따라 해당 금융상품 또는 서비스에 대하여 설명받을 권리가 있으며,
- 그 설명 듣고 내용을 충분히 이해한 후 거래하시기 바랍니다.
- ※ 신용카드 발급이 부적정한 경우(개인신용평점 낮음, 연체(단기 포함) 사유 발생 등), 카드발급이 제한 될 수 있습니다.
- ※ 카드 이용대금과 이에 수반되는 모든 수수료는 고객님께서 지정하신 결제일에 상환하여야 합니다.
 # 부가서비스 변경안내 - ※ 카드이용시 제공되는 포인트 및 할인혜택 등의 부가서비스는 카드 신규출시(2025년 03월 24일) 이후 3년 이상
- 축소, 폐지 없이 유지됩니다.
- ※ 상기에도 불구하고, 다음과 같은 사유가 발생한 경우 카드사는 부가서비스를 변경할 수 있습니다.
 - ① 카드사의 휴업 파산· 경영상의 위기 등에 따른 불가피한 경우
- ② 제휴업체의 휴업· 파산· 경영상의 위기로 인해 불가피하게 부가서비스를 축소 변경하는 경우로서
- 다른 제휴업체를 통해 동종의 유사한 부가서비스 제공이 불가한 경우
- ③ 제휴업체가 카드사의 의사에 반하여 해당 부가서비스를 축소하거나 변경 시, 당초 부가서비스에 상응하는
- 다른 부가서비스를 제공하는 경우
- ④ 부가서비스를 3년 이상 제공한 상태에서 해당 부가서비스로 인해 카드의 수익성이 현저히 낮아진 경우
 ※ 카드사가 부가서비스를 변경하는 경우에는 부가서비스 변경 사유, 변경 내용 등을 사유발생 즉시
아래 고지방법 중 서로 다른 2가지 이상의 방법으로 고지해 드립니다. 특히 부가서비스를 3년 이상 제공한 상태에서
해당 부가서비스로 인해 카드의 수익성이 현저히 낮아져 부가서비스를 변경하는 경우에는 6개월 전부터
아래 고지방법 중 서로 다른 2가지 이상의 방법으로 매월 고지 해 드립니다.
- 고지 방법 :서면 교부, 우편 또는 전자우편, 전화 또는 팩스, 휴대폰 메시지 또는 이에 준하는 전자적 의사표시 # 해외이용 확인사항 ※ 해외 이용시(해외사이트 거래 포함) 미화(USD) 기준 거래미화금액에 접수일의 신한은행 최초고시
전신환매도율을 적용한 후, 국제브랜드사가 부과하는 국제브랜드 수수료(Mastercard 1.0%)와 신한카드사가
부과하는 해외서비스 수수료(신용 0.18%, 체크 0.2%)를 포함하여 원화로 청구됩니다. - 해외 이용시 청구금액 산출방법 - ▶ 해외 이용시 청구금액 : (거래미화금액 x 전신환 매도율') + 국제브랜드 수수료2 + 해외서비스 수수료3
- (1) 전신환 매도율: 접수일의 신한은행 최초고시 전신환 매도율
- (2) 국제브랜드수수료 : (거래미화금액 x 국제브랜드 이용수수료율(Mastercard 1.0%)) x 전신환 매도율
- (3) 해외서비스수수료:(거래미화금액 x 해외서비스 수수료율(신용 0.18%, 체크 0.2%)) x 전신환 매도율
- - 해외 가맹점에서 원화로 거래시(DCC) 추가 수수료가 부과되므로 현지통화 또는 미화로 거래하시기 바랍니다.
- - 해외 가맹점에서 원화결제(DCC) 차단을 원하시는 경우 신한카드 고객센터(1544-7000) 및
- '신한카드 홈페이지 / 모바일앱 > 편의 > 해외원화결제(DCC) 사전차단'에서 신청 가능합니다.
 ※ 일부 해외 가맹점 거래 시 IC칩 비밀번호(PIN)를 요구하는 경우가 있으므로 출국 전 반드시 IC칩 비밀번호(PIN)
등록 여부를 확인하시기 바랍니다. # 연회비 반환 기준 ※ 회원이 유효기간이 도래하기 전에 카드를 해지하는 경우, 연회비 반환 금액은 회원이 카드사와 계약을 해지한 날부터
일할 계산하여 산정합니다. 단, 카드의 발행 배송 등 카드발급에 소요된 비용(신규 가입년도에 해당)은 반환금액에서
제외되며 제휴연회비가 있는 경우에는 카드 이용시 제공되는 추가적인 혜택 등 부가서비스(장보기 3만원 캐시백 서비스)
제공에 소요된 비용이 추가적으로 반환 금액에서 제외됩니다. 연회비 반환은 계약을 해지한 날부터 10일 이내
(영업일 기준) 반환하여 드립니다. 단, 부가서비스 제공내역 확인에 시간이 걸리는 등 불가피한 경우에는 계약해지 날부터
3개월 이내 반환할 수 있습니다. # 가족카드 관련 안내사항 - ※ 가족카드 연회비는 각 상품별 연회비 부과 기준을 따르며 (상품별 별도의 예외 조건이 없는 경우)
- 가족카드 발급매수에는 제한이 없습니다.
- ※ 가족카드가 본인카드와 동일 상품일 경우 (상품별 별도의 예외 조건이 없는 경우) 가족카드 부가서비스 전월이용금액,
- 월별 할인횟수 및 할인한도는 본인카드와 합산 적용됩니다.
- ※ 가족카드 연말정산 시 가족카드 신용카드 등 사용금액은 가족카드 명의자[카드 앞(뒤)면에 표기된 이름]의
- 신용카드 등 사용금액으로 포함됩니다. 연간 소득금액기준은 국세청 기준에 따릅니다.
- ※ 본인회원이 가족회원의 카드사용 내역에 대한 알림을 받고자 하는 경우 고객센터(1 544-7000)에서
- 별도 신청하여야 합니다.
- ※ 가족카드 이용대금명세서는 본인회원이 지정한 주소와 방법으로 발송됩니다.
- ※ 가족카드 이용으로 적립된 포인트는 본인회원의 포인트에 합산되어 관리되며, 본인회원이 신한카드 고객센터
- (1544-7000) 및 홈페이지/모바일앱>혜택>포인트>포인트전환에서 포인트 선물하기 신청을 통해 타 회원에게
- 양도 가능합니다. 단, 포인트 선물하기는 마이신한포인트에 한해 이용이 가능하며, 포인트 선물로
- 상속증여세가 발생 할 수 있으므로 주의 하시기 바랍니다. 제휴사 포인트는 제휴사 기준에 따라 적용됩니다.
- ※ 이혼, 사망, 파양 등 가족관계 변동 시 본인회원 또는 가족회원이 신한카드 고객센터(1 544-7000) 및
- 홈페이지/모바일 앱 > 마이> 내정보관리 > 내카드관리에서 가족카드 정지 또는 해지 가능합니다.
- (홈페이지/모바일 앱 해지는 본인회원 限)
- ※ 가족관계 변동이 되었음에도 가족카드를 정지 또는 해지하지 않은 경우 본인회원에게 의도하지 않은
- 카드사용 및 책임이 발생할 수 있습니다.
- ※ 본인회원이 요청할 경우 가족회원의 동의 없이 가족카드가 한도감액/정지/해지될 수 있습니다.
 # 기타 안내 - ※ 계약을 체결 전, 반드시 금융상품설명서 및 약관을 확인하시기 바랍니다.
- ※ 결제계좌 개설기관의 영업 마감시간(16시) 이후 결제계좌에 입금된 금액에 대해서는 결제계좌 개설 기관의
- 사정에 따라 당일 출금되지 못하여 연체로 처리 될 수 있으므로 유의하시기 바랍니다. 자동납부 업무 마감시간 이후
- 당사 홈페이지/모바일 등에서 즉시결제 또는 가상계좌 입금(송금납부)을 통해 당일 결제가 가능합니다.
- - 세부내용 : 신한카드 홈페이지/모바일 앱 > 고객센터 > 자주하는 질문 > 카드대금 결제방법 참조
- ※ 필요 이상의 신용카드를 발급받을 경우 신용등급 또는 개인신용평점, 이용한도 등에 영향을 미칠 수 있습니다.
- ※ 세부 내용은 신한카드 홈페이지(www.shinhancard.com)를 참조하시기 바랍니다.